[package]
name = "luminary"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/FreeMasen/luminary"

[dependencies]
analisar = "0.2"
clap = { version = "4.4", features = [ "derive" ] }
inkwell = { version = "0.2", features = ["llvm16-0"] }
lex_lua = "0.1.9"
tempfile = "3.8"

[dev-dependencies]
insta = "1.31"
proptest = "1.2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

[workspace.metadata.dist.dependencies.homebrew]
llvm = { version = "16", stage = ["build"] }

[workspace.metadata.dist.dependencies.apt]
llvm = { version = "16", stage = ["build"] }

[workspace.metadata.dist.dependencies.chocolatey]
llvm = { version = "16", stage = ["build"] }
