[package]
name = "luminary"
version = "0.1.0-pre1"
edition = "2021"
repository = "https://github.com/FreeMasen/luminary"

[dependencies]
analisar = "0.2"
clap = { version = "4.4", features = [ "derive" ] }
indexmap = "2"
inkwell = { version = "0.2", features = ["llvm16-0"] }
lex_lua = "0.1.9"
tempfile = "3.8"

[dev-dependencies]
insta = "1.31"
proptest = "1.2"

[features]
default = []
link-with-ld = []

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# Disable the c runtime static linking for Windows releases, this means that users will need
# to provide their own crt when running the outputed binary
# TODO: remove this some day
msvc-crt-static = false
