[package]
name = "luminary-runtime"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
runtime-macros = { path = "../runtime-macros" }

[dev-dependencies]
insta = "1.34"
mlua = { version = "0.9", features = ["lua53", "vendored"]}
proptest = "1.4"

[lib]
crate-type = ["rlib", "staticlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[features]
default = []
runtime = []
names = []
